WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207011
REGRESSION (
r253267
): Swipe from edge on Twitter images no longer goes back
https://bugs.webkit.org/show_bug.cgi?id=207011
Summary
REGRESSION (r253267): Swipe from edge on Twitter images no longer goes back
Tim Horton
Reported
2020-01-30 11:34:44 PST
REGRESSION (
r253267
): Swipe from edge on Twitter images no longer goes back
Attachments
Patch
(1.92 KB, patch)
2020-01-30 11:34 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-01-30 11:34:57 PST
Created
attachment 389271
[details]
Patch
Tim Horton
Comment 2
2020-01-30 11:35:00 PST
<
rdar://problem/58966044
>
WebKit Commit Bot
Comment 3
2020-01-30 13:52:57 PST
Comment on
attachment 389271
[details]
Patch Clearing flags on attachment: 389271 Committed
r255456
: <
https://trac.webkit.org/changeset/255456
>
WebKit Commit Bot
Comment 4
2020-01-30 13:52:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug