Cherry-pick r255456. rdar://problem/63112259

REGRESSION (r253267): Swipe from edge on Twitter images no longer goes back
    https://bugs.webkit.org/show_bug.cgi?id=207011
    <rdar://problem/58966044>

    Reviewed by Wenson Hsieh.

    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView deferringGestureRecognizer:shouldDeferOtherGestureRecognizer:]):
    The new touch-event async deferring gesture recognizer was erroneously deferring
    edge swipes, which are not allowed to be blocked by touch events.
    Opt them out of the new gesture gate mechanism.

    Canonical link: https://commits.webkit.org/220028@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255456 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.561@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@261528 268f45cc-cd09-0410-ab3c-d52691b4dbfc