Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -6832,6 +6832,9 @@ static BOOL allPasteboardItemOriginsMatchOrigin(UIPasteboard *pasteboard, const 
 
 - (BOOL)deferringGestureRecognizer:(WKDeferringGestureRecognizer *)deferringGestureRecognizer shouldDeferOtherGestureRecognizer:(UIGestureRecognizer *)gestureRecognizer
 {
+    if ([_webView _isNavigationSwipeGestureRecognizer:gestureRecognizer])
+        return NO;
+
 #if ENABLE(IOS_TOUCH_EVENTS)
     auto isOneFingerMultipleTapGesture = [](UIGestureRecognizer *gesture) -> BOOL {
         if (![gesture isKindOfClass:UITapGestureRecognizer.class])
